<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="468dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/añadirText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tit_an"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tittleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            android:hint="@string/str_tit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fechIText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_fechI"
            android:inputType="date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fechFText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_fechF"
            android:inputType="date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/horI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_horarioI"
            android:inputType="time"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/horaFText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_horarioF"
            android:inputType="time"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/lugText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_lugar"
            android:inputType="textShortMessage"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/notasText"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/str_notas"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/spinnerCol"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:entries="@array/colores"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>